crates/clan/clan-core/tests/snapshots/clan_golden__script_basic@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
File: aggregated
  Words produced: 16
  Words ideal: 8
  Words correct: 8
  Words omitted: 0
  Words added: 8
  % correct: 100.0%

Summary
  Total produced: 16
  Total ideal: 8
  Total correct: 8
  Overall %: 100.0%
