crates/clan/clan-core/tests/snapshots/clan_golden__sugar_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: GES
  MLU-S: 12.000
  TNW: 13
  WPS: N/A
  CPS: N/A
  Utterances: 3
  Morphemes: 36

Speaker: SPE
  MLU-S: 20.500
  TNW: 15
  WPS: N/A
  CPS: N/A
  Utterances: 2
  Morphemes: 41
