crates/clan/clan-core/tests/snapshots/clan_golden__sugar_speaker_chi@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  MLU-S: 6.000
  TNW: 4
  WPS: 4.000
  CPS: 1.000
  Utterances: 1
  Morphemes: 6
