crates/clan/clan-core/tests/snapshots/clan_golden__timedur_bullets@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
 #  Cur|  CHI  |CHI-CHI|CHI-MOT|  MOT  |MOT-MOT|
