crates/clan/clan-core/tests/snapshots/clan_golden__timedur_bullets@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Timed utterances: 1
  Total duration: 0.963s
  Mean duration: 0.963s
  Min duration: 0.963s
  Max duration: 0.963s

Speaker: MOT
  Timed utterances: 1
  Total duration: 0.963s
  Mean duration: 0.963s
  Min duration: 0.963s
  Max duration: 0.963s

Summary
  Total timed utterances: 2
  Total timed duration: 1.926s
  Recording span: 50m 0.963s
