crates/clan/clan-core/tests/snapshots/clan_golden__trnfix_pho@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Mismatches
  Total items: 4
  Total errors: 4
  Accuracy: 0.0%
  Count  %pho     %mod     
  -----  -------  ---------
  1      a        d        
  1      b        e        
  1      c        f        
  1      ˈɑmɪ     ˈmɑmiː
