crates/clan/clan-core/tests/snapshots/clan_golden__uniq_basic@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
    1  *chi:	the chocolate ones !
    1  *mot:	we can make some together .
    1  *mot:	what kind of cookies ?
    1  @begin
    1  @comment:	constructs: basic utterances, three standard terminators (. ? !), simple words
    1  @comment:	minimal valid chat file with two speakers
    1  @end
    1  @id:	eng|corpus|chi|3;0|female|typical||child|||
    1  @id:	eng|corpus|mot|||||mother|||
    1  @languages:	eng
    1  @participants:	chi child, mot mother
    1  @utf8
Unique number: 13    Total number: 13
