crates/clan/clan-core/tests/snapshots/clan_golden__vocd_eng@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
****** Speaker: *SPE:
triangle keep go 
and he twirl up the hill until he get to the top 
****** Speaker: *GES:
angle keep go 
twirl up the hill 
until he get to the to
