crates/clan/clan-core/tests/snapshots/clan_golden__vocd_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
****** Speaker: *SPE:
WARNING: Not enough tokens for random sampling without replacement.
  (15 tokens available, 50 required)

****** Speaker: *GES:
WARNING: Not enough tokens for random sampling without replacement.
  (13 tokens available, 50 required)
